--- a/registro.html
+++ b/registro.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Congreso Ridestur - Registro</title>
-    <meta property="og:image" content="https://congresoridestur.com/assets/img/info.jpg">
+    <meta property="og:image" content="https://ridesturcongreso.com/assets/img/info.jpg">
     <meta name="description" content="Página oficial de registro al congreso ridestur 2022">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" sizes="1024x1024" href="assets/img/logo-icon.png">
